--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-
+	<h1> Welcome </h1>
+	<p> Changes are made and then pushed to git </p>
 </body>
 </html>
