--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 	<h1> Welcome </h1>
 	<p> Changes are made and then pushed to git </p>
+	<p> Now these changes are made from website to just pull to other side and check </p>
 </body>
 </html>
